Add resume page to site

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,17 @@
 .fancy {
-    color: #32CD32
+    color: #32CD32;
+}
+
+.fluid-col-grid {
+    ul {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-gap: 1rem;
+
+        list-style: disc;
+
+        li:before {
+            content: ''
+        }
+    }
 }
